<resources>
    <string name="app_name">Calculator</string>
    <string name="fogoten_pass">Forgotten Password?</string>
    <string name="send">SEND</string>
    <string name="registration">Registration</string>
    <string name="palindrome">PALINDROME</string>
    <string name="factorial">FACTORIAL</string>
    <string name="execute">Calculate</string>
    <string name="pairs">PAIRS</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="input_number">Enter the number</string>
    <string name="password_recovery">Please, enter your email to recover your password</string>
    <string name="registration_info">To book your course pleease fill in the registration form</string>
    <string name="facebook_app_id">161165894287899</string>



</resources>
